--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "new-space",  
+  "name": "new-space",
+  "homepage": "./",  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
